--- a/client/www/index.html
+++ b/client/www/index.html
@@ -41,6 +41,8 @@
     <script type="text/javascript" src="js/accessKey.js"></script>
 
     <script type="text/javascript">
+        var locationMarker;
+        var map;
 
         // Load Google Maps using variable access key
           var script=document.createElement("script");
@@ -50,11 +52,12 @@
           document.head.appendChild(script);
 
           function initMap() {
-            var map = new google.maps.Map(document.getElementById('map'), {
+             map = new google.maps.Map(document.getElementById('map'), {
               center: {lat: 43.641877, lng: -79.375696},
-              zoom: 5
+              zoom: 5,
+              disableDefaultUI: true
             });
-            var infoWindow = new google.maps.InfoWindow({map: map});
+            //var infoWindow = new google.maps.InfoWindow({map: map});
 
             // Try HTML5 geolocation.
             if (navigator.geolocation) {
@@ -64,10 +67,29 @@
                   lng: position.coords.longitude
                 };
 
-                infoWindow.setPosition(pos);
-                infoWindow.setContent('Location found.');
+                //infoWindow.setPosition(pos);
+                //infoWindow.setContent('Location found.');
+
+
                 map.setCenter(pos);
                 map.setZoom(16);
+
+                locationMarker= new google.maps.Marker({
+                 position: map.getCenter(),
+                 icon: {
+                   path: google.maps.SymbolPath.FORWARD_CLOSED_ARROW,
+                   fillColor: 'red',
+                   fillOpacity: 1,
+                   strokeColor : '#000',
+                   strokeWeight : 1,
+                   scale: 5
+                 },
+                 draggable: true,
+                 map: map
+               });
+
+               enableOrientationArrow();
+
               }, function() {
                 handleLocationError(true, infoWindow, map.getCenter());
               });
@@ -83,6 +105,71 @@
                                   'Error: The Geolocation service failed.' :
                                   'Error: Your browser doesn\'t support geolocation.');
           }
+
+
+
+          // Draw orientation arrow at current position
+          function enableOrientationArrow() {
+
+              if (window.DeviceOrientationEvent) {
+
+                  window.addEventListener('deviceorientation', function(event) {
+                      var alpha = null;
+                      // Check if iOS
+                      if (event.webkitCompassHeading) {
+                          alpha = event.webkitCompassHeading;
+                      }
+                      // If not
+                      else {
+                          alpha = event.alpha;
+                      }
+                      var locationIcon = locationMarker['icon'];
+                      locationIcon.rotation = 360 - alpha;
+                      locationMarker.set('icon', locationIcon);
+                  }, false);
+              }
+          }
+
+          function updateLocation(){
+            if (navigator.geolocation) {
+              navigator.geolocation.getCurrentPosition(function(position) {
+                var pos = {
+                  lat: position.coords.latitude,
+                  lng: position.coords.longitude
+                };
+
+                //infoWindow.setPosition(pos);
+                //infoWindow.setContent('Location found.');
+
+
+                map.setCenter(pos);
+                map.setZoom(16);
+
+                locationMarker= new google.maps.Marker({
+                 position: map.getCenter(),
+                 icon: {
+                   path: google.maps.SymbolPath.FORWARD_CLOSED_ARROW,
+                   fillColor: 'red',
+                   fillOpacity: 1,
+                   strokeColor : '#000',
+                   strokeWeight : 1,
+                   scale: 5
+                 },
+                 draggable: true,
+                 map: map
+               });
+
+               enableOrientationArrow();
+
+              }, function() {
+                handleLocationError(true, infoWindow, map.getCenter());
+              });
+            } else {
+              // Browser doesn't support Geolocation
+              handleLocationError(false, infoWindow, map.getCenter());
+            }
+          }
+        
 
         //Initialize app
         app.initialize();
