--- a/client/www/index.html
+++ b/client/www/index.html
@@ -43,6 +43,8 @@
     <script type="text/javascript">
         var locationMarker;
         var map;
+        var infoWindow;
+
 
         // Load Google Maps using variable access key
           var script=document.createElement("script");
@@ -57,7 +59,7 @@
               zoom: 5,
               disableDefaultUI: true
             });
-            //var infoWindow = new google.maps.InfoWindow({map: map});
+
 
             // Try HTML5 geolocation.
             if (navigator.geolocation) {
@@ -72,7 +74,7 @@
 
 
                 map.setCenter(pos);
-                map.setZoom(16);
+                map.setZoom(17);
 
                 locationMarker= new google.maps.Marker({
                  position: map.getCenter(),
@@ -82,28 +84,32 @@
                    fillOpacity: 1,
                    strokeColor : '#000',
                    strokeWeight : 1,
-                   scale: 5
+                   scale: 5,
+                   anchor: new google.maps.Point(0,2)
                  },
-                 draggable: true,
+                 draggable: false,
                  map: map
                });
 
                enableOrientationArrow();
 
               }, function() {
-                handleLocationError(true, infoWindow, map.getCenter());
+              //  infoWindow = new google.maps.InfoWindow({map: map});
+              //  handleLocationError(true, infoWindow, map.getCenter());
               });
             } else {
               // Browser doesn't support Geolocation
-              handleLocationError(false, infoWindow, map.getCenter());
+            //  infoWindow = new google.maps.InfoWindow({map: map});
+          //    handleLocationError(false, infoWindow, map.getCenter());
             }
           }
 
           function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+            /*infoWindow = new google.maps.InfoWindow({map: map});
             infoWindow.setPosition(pos);
-            infoWindow.setContent(browserHasGeolocation ?
+           infoWindow.setContent(browserHasGeolocation ?
                                   'Error: The Geolocation service failed.' :
-                                  'Error: Your browser doesn\'t support geolocation.');
+                                  'Error: Your browser doesn\'t support geolocation.');*/
           }
 
 
@@ -130,36 +136,23 @@
               }
           }
 
+          // Check location every half a second
+          window.setInterval(function(){
+            if (locationMarker != null) updateLocation();
+          }, 100);
+
+          // Update the location marker
           function updateLocation(){
+            // Check if geolocation is available
             if (navigator.geolocation) {
+              // Get current location
               navigator.geolocation.getCurrentPosition(function(position) {
                 var pos = {
                   lat: position.coords.latitude,
                   lng: position.coords.longitude
                 };
-
-                //infoWindow.setPosition(pos);
-                //infoWindow.setContent('Location found.');
-
-
-                map.setCenter(pos);
-                map.setZoom(16);
-
-                locationMarker= new google.maps.Marker({
-                 position: map.getCenter(),
-                 icon: {
-                   path: google.maps.SymbolPath.FORWARD_CLOSED_ARROW,
-                   fillColor: 'red',
-                   fillOpacity: 1,
-                   strokeColor : '#000',
-                   strokeWeight : 1,
-                   scale: 5
-                 },
-                 draggable: true,
-                 map: map
-               });
-
-               enableOrientationArrow();
+                // Position the marker
+                locationMarker.setPosition(pos);
 
               }, function() {
                 handleLocationError(true, infoWindow, map.getCenter());
@@ -169,7 +162,7 @@
               handleLocationError(false, infoWindow, map.getCenter());
             }
           }
-        
+
 
         //Initialize app
         app.initialize();
