--- a/client/www/index.html
+++ b/client/www/index.html
@@ -46,6 +46,7 @@
         var map;
         var infoWindow;
         var pos;
+        var startLocation
 
 
         // Load Google Maps using variable access key
@@ -53,6 +54,7 @@
           script.type="text/javascript";
           script.src="https://maps.googleapis.com/maps/api/js?key="+ accessKey + "&callback=initMap";
           script.async = true;
+          script.defer = true;
           document.head.appendChild(script);
 
           function initMap() {
@@ -70,10 +72,6 @@
                   lat: position.coords.latitude,
                   lng: position.coords.longitude
                 };
-
-                //infoWindow.setPosition(pos);
-                //infoWindow.setContent('Location found.');
-
 
                 map.setCenter(pos);
                 map.setZoom(17);
@@ -93,6 +91,10 @@
                  draggable: false,
                  map: map
                });
+               startLocation = {
+                 lat:map.getCenter().lat(),
+                 lng:map.getCenter().lng(),
+               }
 
                enableOrientationArrow();
                placeImages();
@@ -142,7 +144,7 @@
 
           // Check location every half a second
           window.setInterval(function(){
-            //if (locationMarker != null) updateLocation();
+            if (locationMarker != null) updateLocation();
           }, 100);
 
           // Update the location marker
@@ -216,17 +218,38 @@
             map: map
           });
 
+          var tempArray = [pos1,pos2];
+          console.log(closestPoint(tempArray));
+
+          }
+
+          //Find the closest picture to the user
+          function closestPoint(positions){
+            var shortestDistance =1000000;
+            var closestPos;
+
+            for (var i = 0; i < positions.length; i ++){
+              distance = calcDistance(startLocation,positions[i]);
+
+              if (distance < shortestDistance) {
+                shortestDistance = distance;
+                closestPos = positions[i];
+              }
+            }
+
+            return closestPos;
           }
 
           // Takes an object with coordinates for each param and calculates distance between
           function calcDistance(start, end){
-            var x1 = start[lat];
-            var x2 = end[lat];
-            var y1 = start[lng];
-            var y2 = end[lng];
+
+            var x1 = start.lat;
+            var x2 = end.lat;
+            var y1 = start.lng;
+            var y2 = end.lng;
 
             var distance = Math.sqrt(Math.pow(x2 -x1,2) + Math.pow(y2 - y1,2));
-
+            console.log(distance);
             return distance;
           }
 
