--- a/client/www/index.html
+++ b/client/www/index.html
@@ -153,13 +153,21 @@
             if (navigator.geolocation) {
               // Get current location
               navigator.geolocation.getCurrentPosition(function(position) {
-                pos = {
+
+                newPos = {
                   lat: position.coords.latitude,
                   lng: position.coords.longitude
                 };
-                // Position the marker
-                locationMarker.setPosition(pos);
-                map.setCenter(pos);
+
+                // Check that the new position is relatively close to the old one
+                // Sometimes maps will lose connection and "jump" somewhere else
+                if (calcDistance(newPos,pos) < 0.0004 || pos.lat < 38){
+                  // Position the marker
+                  pos = newPos;
+                  locationMarker.setPosition(pos);
+                  map.setCenter(pos);
+                }
+                console.log(pos.lat + " " + pos.lng);
 
               }, function() {
                 handleLocationError(true, infoWindow, map.getCenter());
@@ -249,7 +257,6 @@
             var y2 = end.lng;
 
             var distance = Math.sqrt(Math.pow(x2 -x1,2) + Math.pow(y2 - y1,2));
-            console.log(distance);
             return distance;
           }
 
