--- a/client/www/index.html
+++ b/client/www/index.html
@@ -1,4 +1,3 @@
-@@ -1,319 +0,0 @@
 <!DOCTYPE html>
 <html>
 
@@ -46,6 +45,7 @@
       <!--<script type="text/javascript" src="cordova.js"></script>-->
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/accessKey.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
 
     <script type="text/javascript">
         var locationMarker;
@@ -211,6 +211,8 @@
 
           // Put image locations
           function placeImages(){
+            //submitCurrentLoc(pos)
+
             var pos1  = {
               lat: 43.462439,
               lng: -79.708754
@@ -310,7 +312,23 @@
             return (x-a1)/(b1-a1) * (b2-a2) + a2;
           }
 
+          function submitCurrentLoc(pos) {
+              var coordinates = pos.lat + "," + pos.lng;
+              console.log(coordinates);
 
+              $.ajax({
+                  url: "http://moments-map.herokuapp.com/moment",
+                  dataType: 'json',
+                  type: 'POST',
+                  data: coordinates,
+                  success: function(data) {
+                    console.log(data);
+                  }.bind(this),
+                  error: function(xhr, status, err) {
+                    console.error("posting to server", status, err.toString());
+                  }.bind(this)
+                });
+          }
 
         // Initialize app
         app.initialize();
