--- a/client/www/index.html
+++ b/client/www/index.html
@@ -10,7 +10,9 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
 
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
+      <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+
     <style>
       html, body {
         height: 100%;
@@ -30,9 +32,28 @@
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
         </div>-->
+        <nav></nav>
+
         <div id="map" ></div>
         <div id="cover"></div>
         <img id="picture" src = "img/darth-vader.jpg">
+
+
+
+        <div id="modal">
+          <h2> Getting Started </h2>
+          <div id="description">Welcome to Moments, where you can explore recent Instagram photos in places near you</div>
+          <div class="step">
+            Enable GPS on your phone
+          </div>
+          <div class="step">
+            Follow the hot &amp cold bar to locate a memory
+          </div>
+          <div class="step">
+            Have fun
+          </div>
+        </div>
+
         <div id="hot-meter"></div>
         <svg id="indicator" height="20" width="20">
           <polygon points="0,0 20,0 10,20" style="fill:black;"/>
