Made CSS changes

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -43,26 +43,23 @@
 
           <div id="flipper">
             <div id="picture">
-              <img id = "found-image" src = "img/darth-vader.jpg">
+              <img id = "found-image" src = "">
               <div id = "found-image"></div>
               <div id = "picture-text">
                 <div id = "tags">
-                  #vader #darklordofthesith #sinimonbun
+
                 </div>
                 <h3 id = "user">
-                  Darth Vader
+
                 </h3>
                 <div id = "description">
-                  Dark lord of the SithWelcome to Moments, where you can e
-                  xplore recent Instagram photos in places near you.
-                  xplore recent Instagram photos in places near you. xplore recent Instagram photos in places near you.
-                  xplore recent Instagram photos in places near you.
+
                 </div>
                 <div id="gradient">
 
                 </div>
                 <div id="next-memory">
-                    Find Another Memory
+                    Discover Another Moment
                 </div>
               </div>
             </div>
@@ -99,7 +96,7 @@
               </div>
             </div>
 
-            <div id="go-button">GO!</div>
+            <div id="go-button">Start Discovering!</div>
           </div>
         </div>
 
@@ -440,7 +437,6 @@
 
                     document.getElementById('user').innerHTML=target.username;
 
-                    revealImage();
                     console.log(data);
                   }.bind(this),
                   error: function(xhr, status, err) {
