--- a/client/www/index.html
+++ b/client/www/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+    
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
 
@@ -244,7 +245,8 @@
                       var difference = Math.abs(targetAngle - alpha);
                       if (difference > 180) difference = 180 - (difference - 180);
 
-                      var width = screen.width-20;
+                      //var width = screen.width-20;
+                      var width = window.innerWidth-20;
 
                       indicator.style.left = (calcMap(difference,0,180,0,width)-20) + "px";
 
@@ -310,10 +312,6 @@
               lng: -79.708754
             };
 
-            var pos2  = {
-              lat: 43.464543,
-              lng: -79.708721
-            };
             /*
             pictureMarker= new google.maps.Marker({
              position: pos1,
@@ -347,10 +345,10 @@
             map: map
             });
             */
-            var tempArray = [pos1,pos2];
+          //  var tempArray = [pos1,pos2];
 
             // Set the target to the closest picture
-            target = closestPoint(tempArray);
+            target = pos1;
             submitCurrentLoc(pos);
           }
 
